--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,29 @@
 *.war
 *.ear
 *META-INF/
+
+#LaTex
+paper.pdf
+*.log
+*.aux
+*.cfg
+*.glo
+*.idx
+*.toc
+*.ilg
+*.ind
+*.out
+*.lof
+*.lot
+*.bbl
+*.blg
+*.gls
+*.cut
+*.hd
+*.dvi
+*.ps
+*.thm
+*.tgz
+*.zip
+*.rpi
+*~
